--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ html,body{
 }
 
 header {
-    background: #f8f8f8;
+    background: #CCCCFF;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 10px 20px;
 }
@@ -81,12 +81,13 @@ nav ul {
 nav ul li {
     width: 100%;
     padding: 10px 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-bottom: 2px solid #f8f8f8;
     transition: background 0.3s ease-in-out;
 }
 
 nav ul li:hover {
-    background: #f8f9fa;
+    background: none;
 }
 
 nav ul li a {
