--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ html,body{
 }
 
 header {
-    background: #CCCCFF;
+    background: #F5F5DC;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 10px 20px;
 }
