--- a/src/index.css
+++ b/src/index.css
@@ -20,15 +20,109 @@ html,body{
 }
 
 header {
-    background: #F5F5DC;
+    background: #000;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 10px 20px;
+    border: none;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+    color:#333;
+    margin-top:50px;
+
 }
+
+/* Sticky Top Bar */
+.top-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background:#000;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 14px;
+    font-weight: bold;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    z-index: -2;
+}
+
+.phone-icon {
+    color: white;
+}
+
+/* Skeleton Loader */
+.navbar-skeleton {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.logo-skeleton {
+    width: 120px;
+    height: 30px;
+    background: #333;
+    border-radius: 5px;
+    animation: pulse 1.5s infinite ease-in-out;
+}
+
+.nav-items-skeleton {
+    width: 200px;
+    height: 20px;
+    background: #333;
+    border-radius: 5px;
+    animation: pulse 1.5s infinite ease-in-out;
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background: #f4f4f4;
+    border-radius: 5px;
+}
+
+.search-input {
+    flex-grow: 1;
+    border: none;
+    padding: 8px;
+}
+
+.search-icon {
+    cursor: pointer;
+    color: #666;
+}
+.search-logo{
+    width: 30px;
+    height: 30px;
+}
+
 
 .container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
+    color: #fff;
 }
 
 .navbar-grid {
@@ -41,7 +135,8 @@ header {
 
 .logo h1 {
     font-size: 24px;
-    color: #000;
+    color: #fff;
+    font-weight: bolder;
     font-family: 'Poppins', sans-serif;
     margin: 0;
 }
@@ -69,6 +164,7 @@ nav .close-icon {
     align-self: flex-end;
     cursor: pointer;
     margin-bottom: 20px;
+    color:#333;
 }
 
 nav ul {
@@ -93,6 +189,7 @@ nav ul li:hover {
 nav ul li a {
     text-decoration: none;
     color: #333;
+    text-align: center;
     font-size: 18px;
     padding: 10px;
     width: 100%;
@@ -151,6 +248,7 @@ nav ul li a:hover {
     nav ul li a:hover::after {
         transform: scaleX(1);
     }
+
 }
 
 
@@ -193,4 +291,15 @@ nav ul li a:hover {
         background: transparent;
         box-shadow: none;
     }
+}
+
+@media (max-width: 768px) {
+  header{
+    border: none;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
 }
